# research-project-VR-controlled-robot

./: .gitignore  .gitmodules  CMakeLists.txt  Install.md  README.md  main.cpp  test.json
Robot/: CMakeLists.txt  Robot.cpp  Robot.h
ansible/: README.md
ansible/wariatinc/robot/: Makefile  galaxy.yml  hosts.ini
ansible/wariatinc/robot/group_vars/: nuc.yml  ovh_server.yml
ansible/wariatinc/robot/playbooks/: config.yml
ansible/wariatinc/robot/roles/apps.install.python/defaults/: main.yml
ansible/wariatinc/robot/roles/apps.install.python/tasks/: apps.install.python.yml  main.yml
ansible/wariatinc/robot/roles/os_config/defaults/: main.yml
ansible/wariatinc/robot/roles/os_config/handlers/: main.yml
ansible/wariatinc/robot/roles/os_config/tasks/: basic_config.yml  main.yml
ansible/wariatinc/robot/roles/os_config/templates/: .bashrc
ansible/wariatinc/robot/roles/services/defaults/: main.yml
ansible/wariatinc/robot/roles/services/tasks/: main.yml  ngrok.yml  (+1 more)
backend/: .env.template  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
backend/alembic/: CURRENT  env.py
backend/alembic/versions/: 133c768d9505_add_stream_unit_model.py  9905f06718fa_user_model.py  ad11ac3a5148_roles_and_permissions.py  afa509c218c4_add_new_permissions.py  b01217c92f96_add_connect_to_stream_unit_permission.py  e9721d811a25_add_host_and_port_to_stream_unit.py
backend/requirements/: base.in  base.txt  lint.in  lint.txt
backend/src/: app.py  config.py  consts.py
backend/src/auth/: __init__.py  adapters.py  api.py  authentication.py  di.py  exceptions.py  ports.py
backend/src/core/: di.py  utils.py
backend/src/core/api/: exceptions.py  messages.py  models.py  utils.py
backend/src/core/infrastructure/: database.py  unit_of_work.py
backend/src/core/types/: __init__.py  exceptions.py  types.py  url.py
backend/src/di/: __init__.py  container.py  module.py
backend/src/stream/: di.py
backend/src/stream/api/: errors.py  exceptions.py  messages.py  models.py  router.py
backend/src/stream/application/: commands.py  queries.py  services.py  streaming.py  utils.py
backend/src/stream/domain/: dtos.py  entites.py  enums.py  exceptions.py  ports.py  value_objects.py
backend/src/stream/infrastructure/: mappers.py  models.py  repositories.py  unit_of_work.py  views.py
backend/src/user/: api.py  di.py
backend/src/user/domain/: factories.py  interfaces.py  services.py
backend/src/user/infrastructure/: repository.py  unit_of_work.py
backend/src/user/roles/: adapters.py  dtos.py  exceptions.py  models.py  ports.py  repositories.py
backend/src/user/users/domain/: exceptions.py  factories.py  ports.py  services.py
backend/src/user/users/infrastructure/: repository.py  unit_of_work.py
backend/src/user_management/: api.py  di.py
backend/src/user_management/permissions/application/: adapters.py
backend/src/user_management/permissions/domain/: dtos.py  enums.py  exceptions.py  ports.py
backend/src/user_management/permissions/infrastructure/: repositories.py
backend/src/user_management/users/application/: services.py
backend/src/user_management/users/domain/: dtos.py  exceptions.py  ports.py
backend/src/user_management/users/infrastructure/: mappers.py  models.py  repository.py  unit_of_work.py
robot/: CMakeLists.txt  Install.md  build.sh  robot.code-workspace
robot/camera/: CMakeLists.txt  Dockerfile  README.md  build.sh  camera.code-workspace  config.yaml
robot/camera/include/: ConfigReader.hpp  GStreamerHandler.hpp  Log.hpp  VideoStream.hpp
robot/camera/include/Stream/: BasicStream.hpp  GStreamer.hpp  GStreamerPipeline.hpp  RTSPStream.hpp
robot/camera/src/: GStreamerHandler.cpp  VideoStream.cpp  main.cpp
robot/camera/src/Stream/: BasicStream.cpp  GStreamer.cpp  GStreamerPipeline.cpp  RTSPStream.cpp
robot/include/: Log.hpp  VideoStream.hpp  VideoStreamManager.hpp
robot/src/: VideoStream.cpp  VideoStream.hpp  VideoStreamManager.hpp  main.cpp
robot/streaming_server/: client.py  client2.py  server.py  server2.py  talker.py  talker2.py
robot/streaming_server/working_scripts/: robot_command_server.py  talker.py
robot_integration/: README.md  connection_pymavlink.py  connection_pymavlink2.py
simple-opencv-app/: app.py  camera_streaming.py  rasp.py
templates/: nginx.conf  ngrok.service  videostream
wariatinc/robot/: Makefile  README.md  hosts.ini  requirements.txt
wariatinc/robot/playbooks/: config.yml
wariatinc/robot/roles/wireguard/defaults/: main.yml
wariatinc/robot/roles/wireguard/handlers/: main.yml
wariatinc/robot/roles/wireguard/tasks/: main.yml  port_forwarding.yml
wariatinc/robot/roles/wireguard/templates/: client_wg0.conf.j2  generate_keys.sh.j2  nftables.conf.j2  nftables_server.conf.j2  server_wg0.conf.j2
(+12 files in other folders)
